k8s/grafana_demo/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: grafana
  selector:
    app: grafana
  type: NodePort
