k8s/grafana_demo/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: grafana-demo-ip
    networking.gke.io/managed-certificates: grafana-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: grafana-service
      port:
        number: 3000
